--- a/src/main/resources/templates/details/recipe-details.html
+++ b/src/main/resources/templates/details/recipe-details.html
@@ -35,6 +35,24 @@
                 class="fa-solid fa-user"></i></a>
     </div>
 </nav>
+<nav sec:authorize="isAuthenticated()">
+    <button class="burger-btn">
+        <i class="fa-solid fa-burger"></i>
+    </button>
+    <button class="exit-btn">
+        <i class="fa-solid fa-xmark"></i>
+    </button>
+    <div class="menu">
+        <a class="menu__item" th:href="@{/home/user}">Strona główna</a>
+        <a class="menu__item" th:href="@{/plan/generator}">Wygeneruj plan</a>
+        <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
+    </div>
+    <div class="menu__desktop">
+        <a class="menu__item profile" th:href="@{/logout}">Wyloguj się</a>
+        <a title="Twój profil" class="menu__item profile profile-icon" th:href="@{'/user/' + ${#authentication.name}}"><i
+                class="fa-solid fa-user"></i></a>
+    </div>
+</nav>
 <nav sec:authorize="!isAuthenticated()">
     <button class="burger-btn">
         <i class="fa-solid fa-burger"></i>
@@ -46,8 +64,6 @@
         <a class="menu__item" th:href="@{/home}">Strona główna</a>
         <a class="menu__item" th:href="@{/plan/guest}">Wygeneruj plan</a>
         <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
-        <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
-        <a class="menu__item profile menu__login " th:href="@{/login}">Zaloguj się</a>
     </div>
     <div class="menu__desktop">
         <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
