--- a/src/main/resources/templates/plangenerator/grocery-list.html
+++ b/src/main/resources/templates/plangenerator/grocery-list.html
@@ -16,14 +16,11 @@
     <div class="menu">
         <a class="menu__item" th:href="@{/home/user}">Strona główna</a>
         <a class="menu__item" th:href="@{/plan/generator}">Wygeneruj plan</a>
-        <a class="menu__item">Zarządzaj przepisami</a>
         <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
-        <a class="menu__item" th:href="@{'/user/' + ${username}}">Twój profil</a>
-        <a class="menu__item" th:href="@{/logout}">Wyloguj się</a>
     </div>
     <div class="menu__desktop">
         <a class="menu__item profile" th:href="@{/logout}">Wyloguj się</a>
-        <a title="Twój profil" class="menu__item profile profile-icon" th:href="@{'/user/' + ${username}}"><i
+        <a title="Twój profil" class="menu__item profile profile-icon" th:href="@{'/user/' + ${#authentication.name}}"><i
                 class="fa-solid fa-user"></i></a>
     </div>
 </nav>
