--- a/src/main/resources/templates/plangenerator/recipe-in-plan.html
+++ b/src/main/resources/templates/plangenerator/recipe-in-plan.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Meal Planner</title>
-</head>
-<body>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en"-->
+<!--      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Meal Planner</title>-->
+<!--</head>-->
+<!--<body>-->
 
-<br /><br />
-<div>
-    <div>
-        <p th:text="${planRecipe.name()}"></p>
-        <p th:text="'Czas przygotowania: ' + ${planRecipe.prepare_time()}"></p>
-        <p th:text="'Liczba porcji: ' + ${planRecipe.portions()}"></p>
-        <p>Składniki:</p>
-        <ul>
-            <li th:each="ing : ${planRecipe.ingredients()}"
-                th:text="${ing.name()} + ' - ' + ${ing.amountDisplay()} + ' ' + ${ing.unitDisplay()}"
-            ></li>
-        </ul>
-        <p>Przygotowanie:</p>
-        <ul>
-            <li th:each="step : ${planRecipe.steps()}"
-                th:text="${step}"
-            ></li>
-        </ul>
-    </div>
-</div>
-</body>
-</html>
+<!--<br /><br />-->
+<!--<div>-->
+<!--    <div>-->
+<!--        <p th:text="${planRecipe.name()}"></p>-->
+<!--        <p th:text="'Czas przygotowania: ' + ${planRecipe.prepare_time()}"></p>-->
+<!--        <p th:text="'Liczba porcji: ' + ${planRecipe.portions()}"></p>-->
+<!--        <p>Składniki:</p>-->
+<!--        <ul>-->
+<!--            <li th:each="ing : ${planRecipe.ingredients()}"-->
+<!--                th:text="${ing.name()} + ' - ' + ${ing.amountDisplay()} + ' ' + ${ing.unitDisplay()}"-->
+<!--            ></li>-->
+<!--        </ul>-->
+<!--        <p>Przygotowanie:</p>-->
+<!--        <ul>-->
+<!--            <li th:each="step : ${planRecipe.steps()}"-->
+<!--                th:text="${step}"-->
+<!--            ></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
