--- a/src/main/resources/static/css/searcher-style.css
+++ b/src/main/resources/static/css/searcher-style.css
@@ -216,7 +216,8 @@ h1 {
 }
 
 .browser__recipes-container {
-    margin-top: 250px;
+    margin: 210px 0 100px;
+    border: solid 2px var(--light-gray);
 }
 
 .recipe-container__item {
@@ -233,20 +234,47 @@ h1 {
     width: 120px;
     height: 150px;
     box-shadow: 4px 4px 13.4px 0px rgba(0, 0, 0, 0.25);
-    border-radius: 3px;
+    border-radius: 5px;
 }
+@media (min-width:450px) {
+    .recipe-img__link {
+        width: 140px;
+    }
+}
+
 
 .recipe__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
-    /* position: absolute; */
+    border-radius: 5px;
 }
 
 .recipe-container__link {
     width: 120px;
+    text-decoration: none;
+    color: black;
+}
+@media (min-width:450px) {
+    .recipe-container__link {
+        width: 200px;
+    }
+}
+
+.decor-line {
+    display: flex;
+    width: 100px;
+    height: 2px;
+    background-color: var(--gold);
+}
+
+.test {
+    display: flex;
+    flex-direction: column;
     order: 2;
+    gap: 4px;
+    justify-content: center;
 }
 
 @media (min-width: 450px) {
@@ -264,6 +292,63 @@ h1 {
     }
     .hero {
         height: 550px;
+    }
+}
+
+@media (min-width: 992px) {
+    .random__recipes {
+        display: flex;
+    }
+    .browser__recipes-container {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        margin: 240px auto 100px;
+        border: none;
+    }
+    .recipe__img {
+        border-radius: 10px;
+    }
+    .recipe-img__link {
+        border-radius: 10px;
+        width: 250px;
+        height: 360px;
+        position: relative;
+    }
+    .test {
+        height: 60px;
+        position: absolute;
+        z-index: 1;
+
+    }
+
+    .recipe-container__item {
+        border: none;
+        width: auto;
+        cursor: pointer;
+        transition: all .4s ease-in-out 0s;
+    }
+    .recipe-container__item:hover {
+        border: none;
+        width: auto;
+        cursor: pointer;
+        transform: scale(1.1);
+        
+    }
+    .recipe-container__item:hover .decor-line{
+        width: 120px;
+    }
+    .overlay {
+        border-radius: 10px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 60%;
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0.0), rgba(255, 255, 255, 0));
+    }
+    .decor-line {
+        transition: all .4s ease-in-out 0s;
     }
 }
 /*Browser ends*/
