--- a/src/main/resources/templates/browser/searcher.html
+++ b/src/main/resources/templates/browser/searcher.html
@@ -65,12 +65,16 @@
     <section class="random-recipes">
         <ul class="browser__recipes-container">
             <li th:each="recipe : ${recipes}" class="recipe-container__item">
-                <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.nazwa()}"
-                    class="recipe-container__link">
+                <div class="test">
+                    <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.nazwa()}"
+                        class="recipe-container__link">
+                    </a>
                     <div class="decor-line"></div>
-                </a>
+                </div>
+
                 <a th:href="@{/recipes/{id}(id=${recipe.id})}" class=" recipe-img__link">
                     <img th:src="${imageUrlMap[recipe.id]}" alt="Obraz przepisu" class="recipe__img" />
+                    <div class="overlay"></div>
                 </a>
 
             </li>
