--- a/src/main/resources/static/css/plan-info-style.css
+++ b/src/main/resources/static/css/plan-info-style.css
@@ -49,18 +49,13 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 17px;
-    margin: 30px 0 40px;
+    margin: 50px 0 80px;
 }
-.diet-type {
-    width: auto;
-    padding: 6px 12px;
-    font-size: 13px;
-    text-align: center;
-    color: var(--orange);
-    border-radius: 10px;
-    border: 2px solid #FF7F37;
-    cursor: pointer;
+.diet-types__select {
+    padding: 8px 16px;
+    font-size: 14px;
+    border-radius: 8px;
+    border: 2px solid var(--gold);
 }
 .question-number {
     font-family: 'Beau Rivage', cursive;
@@ -249,7 +244,7 @@ input[type="range"] {
 
 /*Plan day form starts*/
 .calendar-input {
-    width: 130px;
+    width: 170px;
     display: flex;
     padding: 8px 12px;
     margin: 40px auto 10px;
@@ -411,12 +406,6 @@ input[type="range"] {
     .header__text {
         font-size: 15px;
     }
-    .diet-type {
-        padding: 8px 14px;
-        font-size: 15px;
-        transition: background-color .4s,
-        color .4s;
-    }
     .diet-type:hover {
         color: var(--white);
         background-color: var(--orange);
@@ -447,6 +436,9 @@ input[type="range"] {
     }
     .plan-btn:hover {
         background-color: var(--gold);
+    }
+    .diet-types__wrapper {
+        margin: 30px 0 106px;
     }
 }
 /*Desktop plan-generator ends*/
