--- a/src/main/resources/templates/details/recipe-details.html
+++ b/src/main/resources/templates/details/recipe-details.html
@@ -34,7 +34,10 @@
                     class="fa-solid fa-user"></i></a>
         </div>
     </nav>
+
     <main class="recipe__content">
+        <img th:src="@{/images/herbs-1280.jpg}" alt="Składniki" class="background-img">
+        <img th:src="@{/images/herbs-1920.jpg}" alt="Składniki" class="background-img-large">
         <div class="recipe__wrapper">
             <div class="recipe__header">
                 <h1 th:text="${name}" class="recipe__title"></h1>
