poprawa prepareTime + zmienna isinfavorite do ulubionych

--- a/src/main/resources/templates/details/recipe-details.html
+++ b/src/main/resources/templates/details/recipe-details.html
@@ -81,9 +81,9 @@
             <li th:each="step : ${steps}" th:text="${step}"></li>
         </ol>
 
-        <div th:if="${favoriteMessage}" style="color: green;" class="favourite__feedback">
-            <p th:text="${favoriteMessage}"></p>
-        </div>
+
+
+        <p th:text="${isInFavorite}" class="prepare-time__text"></p>
 
         <form method="post" th:action="@{/recipes/{id}/favorite(id=${id})}">
             <button type="submit">Dodaj do ulubionych</button>
