--- a/src/main/resources/templates/browser/searcher.html
+++ b/src/main/resources/templates/browser/searcher.html
@@ -57,31 +57,48 @@
             <p class="browser__text-content">Wyszukaj lub wylosuj przepisy</p>
         </div>
     </header>
-    <section class="browser__container">
-        <div id="recipe-search-wrapper" class="recipes-browsing-field">
-            <!-- Tutaj zostanie dodane pole wyszukiwania przez skrypt JS -->
-        </div>
-        <form method="post" th:action="@{/recipes/diet}" class="browser__form">
-            <select name="diet" onchange="removeDefaultOption(this)" class="select-diet">
-                <option value="" disabled selected class="select-diet__option">Wybierz dietę</option>
-                <option th:each="diet : ${diets}" th:text="${diet}" th:value="${diet}" class="select-diet__option">
-                </option>
-            </select>
-            <div class="draw-btn__wrapper">
-                <button type="submit" class="draw-btn" id="submit-button" disabled>
-                    <i class="fa-solid fa-dice"></i>
-                </button>
-                <i class="fa-solid fa-arrow-left"></i>
-                <p class="draw-btn__info">Daj się zainspirować i wylosuj przepisy!</p>
+        <section class="browser__container">
+            <div id="recipe-search-wrapper" class="recipes-browsing-field">
+                <!-- Tutaj zostanie dodane pole wyszukiwania przez skrypt JS -->
             </div>
-        </form>
-    </section>
+
+            <form method="post" th:action="@{/recipes/diet}" class="browser__form">
+                <select name="diet" class="select-diet" required>
+                    <option value="" selected disabled class="select-diet__option">Wybierz dietę</option>
+                    <option th:each="diet : ${diets}" th:text="${diet}" th:value="${diet}" class="select-diet__option">
+                    </option>
+                </select>
+                <div class="draw-btn__wrapper">
+                    <button type="submit" class="draw-btn" id="submit-button">
+                        <i class="fa-solid fa-dice"></i>
+                    </button>
+                    <i class="fa-solid fa-arrow-left"></i>
+                    <p class="draw-btn__info">Daj się zainspirować i wylosuj przepisy!</p>
+                </div>
+            </form>
+        </section>
+<!--        <section class="random-recipes">-->
+<!--            <ul class="browser__recipes-container">-->
+<!--                <li th:each="recipe : ${recipes}" class="recipe-container__item">-->
+<!--                    <div class="test">-->
+<!--                    <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.getName()}"-->
+<!--                        class="recipe-container__link">-->
+<!--                    </a></div>-->
+<!--                    <div class="decor-line"></div>-->
+<!--                </div>-->
+<!--                <a th:href="@{/recipes/{id}(id=${recipe.id})}" class=" recipe-img__link">-->
+<!--                    <img th:src="${imageUrlMap[recipe.id]}" alt="Obraz przepisu" class="recipe__img" />-->
+<!--                    <div class="overlay"></div>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </section>-->
     <section class="random-recipes">
         <ul class="browser__recipes-container">
             <li th:each="recipe : ${recipes}" class="recipe-container__item">
                 <div class="test">
-                    <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.nazwa()}"
-                        class="recipe-container__link">
+                    <a th:href="@{/recipes/{id}(id=${recipe.id})}" th:text="${recipe.getName()}"
+                       class="recipe-container__link">
                     </a>
                     <div class="decor-line"></div>
                 </div>
