--- a/src/main/resources/static/css/searcher-style.css
+++ b/src/main/resources/static/css/searcher-style.css
@@ -4,6 +4,13 @@
 @import '../css/__footer.css';
 @import '../css/__animations.css';
 
+@media (min-width: 992px) {
+    .menu__item:nth-child(4),
+    .menu__item:nth-child(5) {
+      display: none;
+    }
+}
+
 /*Hero graphic starts*/
 .browser-page {
     font-family: "Now", sans-serif;
