--- a/src/main/resources/static/css/__footer.css
+++ b/src/main/resources/static/css/__footer.css
@@ -47,6 +47,7 @@
 .footer__section .social-media__link {
   font-size: 22px;
   color: var(--gold);
+  cursor: pointer;
 }
 @media (min-width: 992px) {
   .footer__section .social-media__link {
