--- a/src/main/resources/static/css/home-guest-style.css
+++ b/src/main/resources/static/css/home-guest-style.css
@@ -12,10 +12,10 @@ nav .active .menu__item:nth-child(3) {
     border-radius: 5px;
   }
   nav .active .menu__item:nth-child(1) {
-    color: var(--gold);
+    color: var(--black);
   }
   nav .active .menu__item:nth-child(2) {
-    color: var(--dark-gray);
+    color: var(--gold);
   }
   nav .active .menu__item:nth-child(4) {
     width: 100vw;
