Połączenie widoku planu i listy zakupów

--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -56,8 +56,7 @@
 
 <!-- Inne pola użytkownika, jeśli są -->
 
-<a th:href="@{/plan/recipes}">Zobacz swój plan posiłków</a>
-<a th:href="@{/plan/grocery-list}">Zobacz swoją listę zakupów</a>
+<a th:href="@{/plan/recipes}">Plan i lista zakupów</a>
 
 </body>
 </html>
