przycisk zamknij dodany do loginu i rejestracji

--- a/src/main/resources/templates/loginandregister/login-page.html
+++ b/src/main/resources/templates/loginandregister/login-page.html
@@ -30,9 +30,9 @@
     </nav>
 
     <div class="login-form__wrapper pop-up">
-        <button class="exitBtn">
+        <a class="exitBtn" th:href="@{/home}">
             <i class="fa-solid fa-xmark"></i>
-        </button>
+        </a>
         <div class="login-form__header">
             <h3 class="header__text">Logowanie</h3>
         </div>
