--- a/src/main/resources/static/css/login-style.css
+++ b/src/main/resources/static/css/login-style.css
@@ -168,6 +168,15 @@
 .login-aproved {
     color: green;
 }
+
+.exitBtn {
+    font-size: 30px;
+    position: absolute;
+    top: 10px;
+    left: 460px;
+    background-color: transparent;
+    color: var(--dark-gray);
+}
 /*Login ends*/
 
 /*registration starts*/
@@ -182,7 +191,7 @@
     }
 }
 .reg-form__header {
-    margin: 30px 0 20px;
+    margin: 52px 0 20px;
 }
 .registered-info {
     margin-bottom: 30px;
