--- a/src/main/resources/templates/loginandregister/register.html
+++ b/src/main/resources/templates/loginandregister/register.html
@@ -11,24 +11,27 @@
 </head>
 
 <body class="registration-page">
-<nav>
-    <button class="burger-btn">
-        <i class="fa-solid fa-burger"></i>
-    </button>
-    <button class="exit-btn">
-        <i class="fa-solid fa-xmark"></i>
-    </button>
-    <div class="menu">
-        <a class="menu__item" th:href="@{/home}">Strona główna</a>
-        <a class="menu__item" th:href="@{/plan/guest}">Wygeneruj plan</a>
-        <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
-    </div>
-    <div class="menu__desktop">
-        <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
-        <a class="menu__item profile" th:href="@{/login}">Zaloguj się</a>
-    </div>
-</nav>
+    <nav>
+        <button class="burger-btn">
+            <i class="fa-solid fa-burger"></i>
+        </button>
+        <button class="exit-btn">
+            <i class="fa-solid fa-xmark"></i>
+        </button>
+        <div class="menu">
+            <a class="menu__item" th:href="@{/home}">Strona główna</a>
+            <a class="menu__item" th:href="@{/plan/guest}">Wygeneruj plan</a>
+            <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
+        </div>
+        <div class="menu__desktop">
+            <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
+            <a class="menu__item profile" th:href="@{/login}">Zaloguj się</a>
+        </div>
+    </nav>
     <div class="login-form__wrapper pop-up">
+        <a class="exitBtn" th:href="@{/home}">
+            <i class="fa-solid fa-xmark"></i>
+        </a>
         <div class="login-form__header reg-form__header">
             <h3 class="header__text">Rejestracja</h3>
         </div>
@@ -66,10 +69,8 @@
         </form>
     </div>
     <div class="login-form__background display"></div>
-
-
     <script src="https://kit.fontawesome.com/3d3eb47a80.js" crossorigin="anonymous"></script>
-    <script th:src="@{/js/loginForm.js}"></script>
+    <!-- <script th:src="@{/js/loginForm.js}"></script> -->
 </body>
 
 </html>
