--- a/src/main/resources/static/css/home-user-style.css
+++ b/src/main/resources/static/css/home-user-style.css
@@ -10,6 +10,13 @@
     display: none;
   }
 }
+  nav .active .menu__item:last-child {
+    width: auto;
+    padding: 16px 30px;
+    margin-top: 40px;
+    border: 1px solid var(--gold);
+    border-radius: 5px;
+  }
 main {
     width: 100vw;
     font-family: "Now", sans-serif;
