--- a/src/main/resources/templates/browser/searcher.html
+++ b/src/main/resources/templates/browser/searcher.html
@@ -23,7 +23,7 @@
             <a class="menu__item" th:href="@{/plan/generator}">Wygeneruj plan</a>
             <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
             <a class="menu__item" th:href="@{'/user/' + ${#authentication.name}}">Twój profil</a>
-            <a class="menu__item profile" th:href="@{/logout}">Wyloguj się</a>
+            <a class="menu__item profile user-item" th:href="@{/logout}">Wyloguj się</a>
         </div>
         <div class="menu__desktop">
             <a class="menu__item profile" th:href="@{/logout}">Wyloguj się</a>
@@ -41,9 +41,9 @@
         <div class="menu">
             <a class="menu__item" th:href="@{/home}">Strona główna</a>
             <a class="menu__item" th:href="@{/plan/guest}">Wygeneruj plan</a>
-            <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
             <a class="menu__item" th:href="@{/recipes}">Wyszukaj przepis</a>
-            <a class="menu__item profile" th:href="@{/login}">Zaloguj się</a>
+            <a class="menu__item profile guest-item" th:href="@{/register}">Zarejestruj się</a>
+            <a class="menu__item profile guest-item" th:href="@{/login}">Zaloguj się</a>
         </div>
         <div class="menu__desktop">
             <a class="menu__item profile" th:href="@{/register}">Zarejestruj się</a>
