--- a/src/main/resources/static/css/searcher-style.css
+++ b/src/main/resources/static/css/searcher-style.css
@@ -10,21 +10,26 @@
       display: none;
     }
 }
-nav .active .menu__item:nth-child(3) {
-    order: 1;
+  nav .active .menu__item.user-item {
     width: auto;
     padding: 16px 30px;
     margin-top: 40px;
     border: 1px solid var(--gold);
     border-radius: 5px;
-  }
+}
+nav .active .menu__item.guest-item {
+    width: auto;
+    padding: 16px 30px;
+    margin-top: 40px;
+    border: 1px solid var(--gold);
+    border-radius: 5px;
+}
 
 /*Hero graphic starts*/
 .browser-page {
     font-family: "Now", sans-serif;
 }
 .hero {
-
     position: relative;
     width: 100%;
     height: 500px;
@@ -281,7 +286,6 @@ h1 {
     height: 2px;
     background-color: var(--gold);
 }
-
 .test {
     display: flex;
     flex-direction: column;
@@ -289,7 +293,6 @@ h1 {
     gap: 4px;
     justify-content: center;
 }
-
 @media (min-width: 450px) {
     .hero__image {
         display: none;
