dodanie linków do obrazków home

--- a/src/main/resources/templates/home/home-guest.html
+++ b/src/main/resources/templates/home/home-guest.html
@@ -70,7 +70,7 @@
                     <p class="content about-us__ps">Daj się zaskoczyć lub wyszukaj coś dla siebie!</p>
                 </div>
                 <div class="recipes element">
-                    <a class="recipes__link">Wyszukaj przepis</a>
+                    <a class="recipes__link" th:href="@{/recipes}">Wyszukaj przepis</a>
                     <img class="about-us__image" th:src="@{/images/keram.jpg}" alt="warzywa">
                 </div>
                 <div class="about-us__text-content element">
