Dodanie email do widoku profilu

--- a/src/main/resources/templates/details/user-details.html
+++ b/src/main/resources/templates/details/user-details.html
@@ -31,8 +31,7 @@
 
 <h1>Profil użytkownika : </h1>
 <p>Login: <span th:text="${username}"></span></p>
-<p>Role: <span th:text="${role}"></span></p>
-<p>Role: <span th:text="${id}"></span></p>
+<p>Email: <span th:text="${email}"></span></p>
 
 
 
